Add Select All that Apply Question functionality
Added the ability to support questions that have multiple answer
selections.